# trumptrade

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  test_confidence_gate.py  test_e2e_trade.py  test_threshold_e2e.py
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 004_analysis_app_settings.py  005_risk_settings.py  006_benchmark_unique.py  6e3709bc5279_initial_schema.py
deploy/: nginx.conf  trumptrade.service
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
scripts/: deploy-update.sh
tests/ingestion/: test_filters.py  test_heartbeat.py
tests/trading/: test_executor.py
trumptrade/: __main__.py
trumptrade/analysis/: __init__.py  anthropic_adapter.py  base.py  dispatcher.py  groq_adapter.py  worker.py
trumptrade/benchmarks/: __init__.py  job.py  router.py
trumptrade/core/: app.py  config.py  db.py  logging.py  models.py
trumptrade/dashboard/: __init__.py  router.py  watchlist.py  ws.py
trumptrade/ingestion/: __init__.py  filters.py  heartbeat.py  twitter.py  (+1 more)
(+216 files in other folders)
