[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trumptrade"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "tweepy>=4.14.0",
    "openai>=1.30.0",
    "alpaca-py>=0.20.0",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "anthropic>=0.96.0",
    "groq>=1.2.0",
    "curl-cffi>=0.7.0",
    "tzdata>=2024.1",
]

[project.scripts]
trumptrade = "trumptrade.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trumptrade*"]
